@@ -25,6 +25,7 @@
 	std : fixed some file descriptor issues with processes and threads
 	jit : fixed crash whith unsupported OO overloading
 	vm : added $getkind and $iskind builtins
+	std : added same_closure for closure comparison
 
 2008-07-28 : 1.7.1
 	nekotools : fixed set_return_code in web server
